--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,7 +1,7 @@
 repository:
   name: mariadb
   description: Docker images for MariaDB
-  homepage: https://hub.docker.com/r/webhippie/mariadb
+  homepage: https://hub.docker.com/r/nlss/mariadb
   topics: docker, image, container
 
   private: false
@@ -46,11 +46,3 @@ labels:
   - name: outdated
     color: cccccc
     description: This is out of scope and outdated
-
-branches:
-  - name: master
-    protection:
-      required_status_checks:
-        strict: true
-        contexts:
-          - continuous-integration/drone/pr
