Restore /var/lib/mysql as data dir

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,15 @@ services:
   database:
     image: ghcr.io/n0rthernl1ghts/mariadb:latest
     environment:
+      PUID: 1000
+      PGID: 1000
       MARIADB_USERNAME: 'webapp'
       MARIADB_PASSWORD: 'example_password'
       MARIADB_DATABASE: 'app,cars,docs'
       MARIADB_ROOT_PASSWORD: 'example_password'
     volumes:
-      - data:/config
-      - data_legacy:/var/lib/mysql
+      - config:/config
+      - data:/var/lib/mysql
       - log:/var/log/mysql
     networks:
       default: {aliases: [database]}
@@ -34,6 +36,6 @@ networks:
   database:
 
 volumes:
+  config:
   data:
-  data_legacy:
   log:
