--- a/rootfs/defaults/custom.template.cnf
+++ b/rootfs/defaults/custom.template.cnf
@@ -102,7 +102,7 @@ console                 = {{ getenv "MARIADB_CONSOLE" "1" }}
 #
 log_warnings            = {{ getenv "MARIADB_LOG_WARNINGS" "2" }}
 # Error logging goes to syslog due to /etc/mysql/conf.d/mysqld_safe_syslog.cnf
-log_error               = /config/log/mysql/error.log
+log_error               = /config/log/mysql/mariadb-error.log
 #
 # Enable the slow query log to see queries with especially long duration
 slow_query_log          = {{ getenv "MARIADB_SLOW_QUERY_LOG" "1" }}
