Add build on workflow_dispatch, schedule and master build trigger to only build when relevant files have changed

--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -1,9 +1,20 @@
 name: Build
 
 on:
+  workflow_dispatch:
+  schedule:
+    - cron: "0 3 * * */7"
   push:
     branches:
-      - 'master'
+      - master
+    paths:
+      - .github/workflows/image.yml  # This workflow file itself
+      - .dockerignore
+      - Dockerfile
+      - build/docker-bake.hcl
+      - rootfs/**
+      - src/**
+
 
 jobs:
   docker:
